cabal-version:       2.4

name:                curling
version:             0.1.0.0
author:              JT Paasch
maintainer:          jt.paasch@gmail.com
synopsis:            Library for making simple HTTP requests
description:         Library for making simple HTTP requests.
extra-source-files:  README.md

library
  ghc-options:       -O0 -Wall -Werror
  exposed-modules:   Network.HTTP.Curling.Client
  build-depends:       base >=4.12
                     , bytestring
                     , text
                     , aeson
                     , http-client
                     , http-types
                     , http-api-data
                     , req
  default-language:  Haskell2010
